# routes/api.go
@@ -113,6 +113,24 @@ func Api() {
 			r.Get("pingStatus", safeController.GetPingStatus)
 			r.Post("pingStatus", safeController.SetPingStatus)
 		})
+		r.Prefix("file").Middleware(middleware.Jwt()).Group(func(r route.Router) {
+			fileController := controllers.NewFileController()
+			r.Post("create", fileController.Create)
+			r.Get("content", fileController.Content)
+			r.Post("save", fileController.Save)
+			r.Post("delete", fileController.Delete)
+			r.Post("upload", fileController.Upload)
+			r.Post("move", fileController.Move)
+			r.Post("copy", fileController.Copy)
+			r.Get("download", fileController.Download)
+			r.Post("remoteDownload", fileController.RemoteDownload)
+			r.Get("info", fileController.Info)
+			r.Post("permission", fileController.Permission)
+			r.Post("archive", fileController.Archive)
+			r.Post("unArchive", fileController.UnArchive)
+			r.Post("search", fileController.Search)
+			r.Post("list", fileController.List)
+		})
 		r.Prefix("monitor").Middleware(middleware.Jwt()).Group(func(r route.Router) {
 			monitorController := controllers.NewMonitorController()
 			r.Post("switch", monitorController.Switch)
